<resources>
    <string name="app_name">AIRA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="message_login_page">Please kindly insert your data</string>
    <string name="email">Email</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_any_account">Don\'t have Any Account Yet?</string>
    <string name="failed">Failed!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="sure">Sure</string>
    <string name="language_settings_not_available">Language Settings Not Available</string>
    <string name="success">Success</string>
    <string name="account_created">Account created:</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="failed_show_camera">Failed to show camera</string>
    <string name="failed_camera">Failed camera</string>
    <string name="aira">AIRA</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="fill_required_data">Fill the required data</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_description">Enter description</string>
    <string name="upload">Upload</string>
    <string name="try_again">Try Again</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="or">or</string>
    <string name="your_web_client_id">961131987124-tdpjuh2uo14reoreptr6fmr6h53qd6qh.apps.googleusercontent.com</string>
    <string name="no_musics_obtained">No musics obtained</string>
    <string name="search_for_a_music">Search for a music</string>
    <string name="previously_played">Previously played</string>
    <string name="featured_musics">Featured Musics</string>
    <string name="title_profile">Profile</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_musics">Musics</string>
    <string name="unnamed">Unnamed</string>
    <string name="bookmarked_musics">Bookmarked Musics</string>
    <string name="evaluation_history">Evaluation History</string>
    <string name="no_data_obtained">No Data Obtained</string>
    <string name="author">Author</string>
    <string name="difficulty">Difficulty</string>
    <string name="summary">Summary</string>
    <string name="colon">:</string>
    <string name="start_playing">Start Playing</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="evaluate">Evaluate</string>
    <string name="recording_will_automatically_stop_when_the_notes_end">Recording will automatically stop, when the notes end</string>
    <string name="search_result">Search Result</string>
    <string name="please_wait_for_a_moment">Please wait for a moment</string>
    <string name="previously_evaluated">Previously Evaluated</string>
</resources>